Added autofocus to password input field

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <!-- Password field -->
         <div class="row">
           <div class="input-field col s4 offset-s4">
-            <input id="inputPassword" type="password">
+            <input id="inputPassword" type="password" autofocus>
             <label for="inputPassword">Password</label>
           </div>
         </div>
